--- a/test-projects/pyproject/requirements.txt
+++ b/test-projects/pyproject/requirements.txt
@@ -3,3 +3,8 @@ charset-normalizer==3.3.2
 idna==3.7
 requests==2.30.0
 urllib3==2.2.2
+
+# transitive: use fastapi, starlette has a vuln here
+fastapi==0.6.0
+pydantic==0.18.2
+starlette==0.11.1
